--- a/static/css/commons.css
+++ b/static/css/commons.css
@@ -1,13 +1,15 @@
-<<<<<<< HEAD
-html, body{
+html, body, h1, h2{
   padding: 0;
   margin: 0;
 }
+h1, h2{ }
+h1{ font-size: 3rem;}
+h2{ font-size: 2rem;}
 div{
   box-sizing: border-box;
 }
 header{
-  height: 20vh;
+  height: 15vh;
   background-color: #818181;
 }
 .main_container {
@@ -19,55 +21,66 @@ header{
 }
 .main_container .nav_container{
   float: left;
-  width: 20%;
+  width: 15%;
   height: 100vh;
   background-color: #717171;
 }
 .main_container .section_container {
   float: left;
-  width: 80%;
+  width: 85%;
   height: 100vh;
   background-color: red;
 }
-.main_container .section_container .check_container{
-  width: 100%;
-  height: 150px;
-  background-color: yellow;
-}
-=======
-html, body{
-  padding: 0;
-  margin: 0;
-}
-div{
+.main_container .section_container .text_container{
+  width: 80%;
+  height: 5%;
+  margin: 2% 10%;
   box-sizing: border-box;
 }
-header{
-  height: 20vh;
-  background-color: #818181;
-}
-.main_container {
-  width: 100%;
-  height: 100vh;
-  background-color: #616161;
-  padding: 0px;
-  margin: 0px;
-}
-.main_container .nav_container{
-  float: left;
-  width: 20%;
-  height: 100vh;
-  background-color: #717171;
-}
-.main_container .section_container {
-  float: left;
-  width: 80%;
-  height: 100vh;
-  background-color: red;
-}
 .main_container .section_container .check_container{
-  width: 100%;
-  height: 150px;
+  width: 90%;
+  height: 15%;
+  margin: 2% 5%;
   background-color: yellow;
 }
->>>>>>> 610014354c14f98e7f2745c9fe9980c57f697cc6
+.main_container .section_container .check_container .select_container{
+  width: 80%;
+  margin: 0px 10%;
+  height: 80%;
+}
+.main_container .section_container .check_container .btn_container{
+  width: 100%;
+  height: 20%;
+}
+.btn_container button{
+  float: right;
+  margin-right: 10%;
+  width: 100px;
+  height: 30px;
+
+}
+.main_container .section_container .table_container{
+  width: 100%;
+  height: 70%;
+
+}
+
+#data_table{
+  border: 1px solid black;
+  width: 80%;
+  margin: 0px 10%;
+  text-align: center;
+}
+.select_container .inner{
+  float: left;
+  width: 33.3%;
+  height: 100%;
+  padding: 1%;
+  box-sizing: border-box;
+}
+.select_container .inner select{
+  height: 30px;
+}
+.select_container #main_cate, #mid_cate, #small_cate{
+  width: 100%;
+}
