--- a/static/css/commons.css
+++ b/static/css/commons.css
@@ -14,7 +14,7 @@ header{
 }
 .main_container {
   width: 100%;
-  height: 100vh;
+  height: 85vh;
   background-color: #616161;
   padding: 0px;
   margin: 0px;
@@ -22,14 +22,14 @@ header{
 .main_container .nav_container{
   float: left;
   width: 15%;
-  height: 100vh;
+  height: 85vh;
   background-color: #717171;
 }
 .main_container .section_container {
   float: left;
   width: 85%;
-  height: 100vh;
-  background-color: red;
+  height: 85vh;
+  background-color:  #ebebe0;
 }
 .main_container .section_container .text_container{
   width: 80%;
@@ -39,7 +39,8 @@ header{
 }
 .main_container .section_container .check_container{
   width: 90%;
-  height: 15%;
+  min-height: 75px;
+
   margin: 2% 5%;
   background-color: yellow;
 }
@@ -83,4 +84,22 @@ header{
 }
 .select_container #main_cate, #mid_cate, #small_cate{
   width: 100%;
+}
+.modal-content span{
+  display: block;
+  float: left;
+  box-sizing: border-box;
+  text-align: center;
+  border : 1px solid black;
+  height: 50px;
+  padding-top: 15px;
+
+}
+#modal_title{
+  width: 30%;
+  font-weight: bold;
+  background-color: #fffdde;
+}
+#modal_data{
+  width: 70%;
 }
