--- a/static/css/commons.css
+++ b/static/css/commons.css
@@ -2,6 +2,9 @@ html, body, h1, h2{
   padding: 0;
   margin: 0;
 }
+a:link { color: red; text-decoration: none;}
+a:visited { color: black; text-decoration: none;}
+a:hover { color: black; text-decoration: underline;}
 h1, h2{ }
 h1{ font-size: 3rem;}
 h2{ font-size: 2rem;}
@@ -84,6 +87,9 @@ header{
 }
 .select_container #main_cate, #mid_cate, #small_cate{
   width: 100%;
+}
+#main_cate{
+
 }
 .modal-content span{
   display: block;
